# tuna_vrx

./: Changelog.md  README.md
tuna_thruster_bridge/: CMakeLists.txt  package.xml
tuna_thruster_bridge/src/: joint_state_to_thrust_converter.cpp  thruster_relay_node.cpp
vrx_gz/launch/: competition.launch.py  spawn.launch.py
vrx_gz/src/vrx_gz/: launch.py  model.py
vrx_urdf/tuna_description/: CMakeLists.txt  package.xml
vrx_urdf/tuna_description/config/: rviz_tuna.rviz
vrx_urdf/tuna_description/launch/: display.launch.py
vrx_urdf/tuna_description/urdf/: boat_floated_chatgpt.urdf  boat_floated_deepseek.urdf
vrx_urdf/tuna_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vrx_urdf/tuna_gazebo/config/: joy_teleop.yaml  tuna_controllers.yaml
vrx_urdf/tuna_gazebo/launch/: joy_teleop.launch.py
vrx_urdf/tuna_gazebo/src/tuna_gazebo/: joy_teleop.py
vrx_urdf/tuna_gazebo/urdf/: boat_gazebo.urdf  boat_gazebo_org.urdf
vrx_urdf/vrx_gazebo/: package.xml
vrx_urdf/wamv_gazebo/urdf/thruster_layouts/: wamv_gazebo_thruster_config.xacro
